# FreeCell

./: Anchor.toml  README.md  package.json  tsconfig.json
app/freecell_frontend/: package-lock.json  package.json
programs/FreeCell/: Cargo.toml
programs/FreeCell/src/: lib.rs
programs/FreeCell/src/instructions/: setup_game.rs  start_game.rs
programs/FreeCell/src/state/: cards.rs  cells.rs  game.rs  mod.rs
programs/freecell/: Cargo.toml
programs/freecell/src/: errors.rs  lib.rs
programs/freecell/src/instructions/: mod.rs  setup_game.rs
programs/freecell/src/state/: cards.rs  cells.rs  game.rs  mod.rs
tests/: FreeCell.ts  freecell.ts
